Output Java11 binaries.